Updated by mdLocalizeVideoLinks.py

--- a/c-legacy-releases/2022/08172022.md
+++ b/c-legacy-releases/2022/08172022.md
@@ -135,7 +135,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
 ### 產品更新影片
 
-觀看 [2022 年 7 月版本概觀影片](https://video.tv.adobe.com/v/345409/?quality=12)，以瞭解 2022.7.0 (2022 年 7 月) 版本新增的功能摘要。<!-- Beginning with the video this month, Adobe has enabled localized closed captioning in French (FR), German (DE) and Japanese (JP). -->
+觀看 [2022 年 7 月版本概觀影片](https://video.tv.adobe.com/v/3454207/?quality=12&captions=chi_hant)，以瞭解 2022.7.0 (2022 年 7 月) 版本新增的功能摘要。<!-- Beginning with the video this month, Adobe has enabled localized closed captioning in French (FR), German (DE) and Japanese (JP). -->
 
 * [2022 年 6 月版本概觀影片](https://video.tv.adobe.com/v/344308/?quality=12)
 * [2022 年 5 月版本概觀影片](https://video.tv.adobe.com/v/343321/?quality=12)
