Updated by mdAutofix.py

--- a/c-legacy-releases/2022/02162022.md
+++ b/c-legacy-releases/2022/02162022.md
@@ -169,8 +169,8 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
   觀看 [2022 年 1 月版本概觀影片](https://video.tv.adobe.com/v/340120)，了解 2022.1.0 (2022 年 1 月) 版本新增功能摘要。
 
    * [2021 年 12 月版本新功能的概觀影片](https://video.tv.adobe.com/v/339278)。
-   * [](https://video.tv.adobe.com/v/338253)2021 年 10 月版本概觀 新功能影片。
-   * [](https://video.tv.adobe.com/v/337381)2021 年 9 月版本概觀 新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/338253)2021 年 10 月版本概觀 新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/337381)2021 年 9 月版本概觀 新功能影片。
 
    * **Experience Manager Assets as a Cloud Service**
 
